--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Compiled class files
+*.class
+
+# Log files
+*.log
+
+# Maven
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -7,11 +14,45 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
-# Eclipse m2e generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
+# Test Results & Reports
+allure-results/
+allure-report/
+surefire-reports/
+test-output/
+*.xml.bak
+
+# IDE - IntelliJ IDEA
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+
+# IDE - Eclipse
 .classpath
+.project
+.settings/
+bin/
+
+# IDE - VS Code
+.vscode/
+*.code-workspace
+
+# OS Files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Selenium
+*.log
+chromedriver.exe
+geckodriver.exe
+*.exe
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~
