--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <allure.version>2.24.1</allure.version>
     <aspectj.version>1.9.21</aspectj.version>
     <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
+    <suiteXmlFile>testng.xml</suiteXmlFile>
   </properties>
 
   <dependencies>
@@ -94,7 +95,7 @@
         <version>3.2.5</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
+            <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
           </suiteXmlFiles>
           <properties>
             <property>
