benerin codingan account testing

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
       <artifactId>webdrivermanager</artifactId>
       <version>6.3.2</version>
     </dependency>
+    <!-- Gson for JSON parsing (DataProvider) -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10.1</version>
+    </dependency>
   </dependencies>
 
   <build>
